test: keep HA1214 contract Java 8 compatible